name:           Monads
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         pl186036

library 
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   ChapterThree,
                   ChapterTwo,
                   ChapterFour,
                   ChapterFive



