name:           RPS
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         navaro1

executable RPS
  hs-source-dirs:  
  main-is:         Main.hs
  build-depends:   base >= 4,
                   random-extras,
                   rvar,
                   random-source,
                   bytestring,
                   text,
                   containers
  ghc-options:     -Wall

