name:           Yesod
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         navaro1

executable Yesod
  hs-source-dirs:  src
  main-is:         HelloWorld.hs
  build-depends:   
                   base >= 4,
                   yesod >=1.4 && <1.5
  ghc-options:     -Wall

