name:           Yesod
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         navaro1

executable Yesod
  hs-source-dirs:  
  main-is:         FirstYesodApp.hs
  build-depends:   
                   base,
                   yesod >=1.4 && <1.5,
                   persistent,
                   text,
                   persistent-sqlite,
                   persistent-template,
                   transformers,
                   monad-logger,
                   resourcet
                   
  ghc-options:     -Wall
  other-modules:   Sandbox

